<resources>
    <string name="app_name">SER-BANK</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="pla_txtusuario">Ingrese el usuario</string>
    <string name="pla_txtpassword">Ingrese la contraseña</string>
    <string name="menu_verusuarios">Visualizar usuarios</string>
    <string name="menu_crearusuario">Crear usuario</string>
    <string name="menu_historialtransacciones">Historial Transaciones</string>
    <string name="crearusuario_nombre">Ingrese el nombre del usuario</string>
    <string name="crearusuario_apellidos">Ingrese los apellidos del usuario</string>
    <string name="crearusuario_email">Ingrese el email del usuario</string>
    <string name="crearusuario_password">Ingrese la contraseña del usuario</string>
    <string name="crearusuario_btncrear">Crear usuario</string>
    <string name="realizartrans_btntransaccion">Realizar Transacción</string>
    <string name="realizartrans_monto">Ingres el monto de enviar</string>
    <string name="realizartrans_cuenta">Codigo de cuenta</string>
    <string name="realizartrans_tipotransaccion">Tipo Transacción</string>
    <string name="listusuarios">Lista de usuarios</string>



</resources>